# DoomAgent

./: .gitignore  .gitmodules  ASSIGNMENT_REPORT.md  Makefile  Note.md  README.md  RESEARCH_REPORT.md  pyproject.toml
doomagent/: config.py  env.py
doomagent/agents/: __init__.py  dqn.py
doomagent/buffers/: __init__.py
doomagent/models/: encoder.py
doomagent/utils/: checkpoint.py
resources/: server_eval_doom.py
scripts/: evaluate.py  record.py  train.py  train_dqn.py
src/doomagent/: config.py  env.py  reward.py
src/doomagent/agents/: base.py  dqn.py  ppo.py
src/doomagent/buffers/: replay.py  rollout.py
src/doomagent/models/: __init__.py  base.py  dqn.py  encoder.py  ppo.py
src/doomagent/utils/: export.py  logger.py  running_stats.py
